# glimpse

./: .gitignore  AGENTS.md  Info.plist  Makefile  Package.swift  README.md  package-lock.json  package.json
Sources/Glimpse/App/: AppDelegate.swift  GlimpseApp.swift
Sources/Glimpse/Camera/: CameraDevice.swift  CameraDiscovery.swift  CameraError.swift  CameraManager.swift  CameraPreviewView.swift
Sources/Glimpse/MenuBar/: ConfigurationMenuBuilder.swift  MenuBarIcon.swift  StatusItemController.swift
Sources/Glimpse/Settings/: LoginItem.swift  Preferences.swift
Sources/Glimpse/Views/: CameraErrorView.swift  PreviewContentView.swift
Sources/Glimpse/Windows/: PreviewPanel.swift  PreviewPositioner.swift  PreviewWindowController.swift
Tests/GlimpseTests/: CameraErrorTests.swift  CameraSelectionTests.swift  PreferencesTests.swift  PreviewPositionerTests.swift
scripts/: regenerate-icons.sh
src/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/: build.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: NativeCameraPreview.m
src-tauri/src/: lib.rs
src/icons/: icon-large.xcf
src/native/: NativeCameraPreview.m
src/src/: lib.rs  native_camera.rs
