[package]
name = "glimpse"
version = "0.1.0"
description = "A small desktop camera preview utility."
authors = ["Glimpse Contributors"]
edition = "2021"

[lib]
name = "glimpse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-autostart = "2"
